--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src"]
 	path = src
-	url = git@github.com:bobvandevijver/pasteboard.git
+	url = https://github.com/bobvandevijver/pasteboard.git
